<resources>
    <string name="app_name">Adoptify</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Selamat datang</string>
    <string name="welcome_text_2">di Adoptify!</string>
    <string name="desc_app">Aplikasi yang dibuat untuk mengadopsi\ndan juga merawat hewan peliharaan</string>
    <string name="start">Mulai</string>
    <string name="next">Lanjut</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="havent_acc">Sudah memiliki akun?</string>
    <string name="text_in">Masuk</string>
    <string name="register">Daftar</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="or_next_with">atau lanjutkan dengan</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_adopt">Adopt</string>
    <string name="title_profile">Profile</string>
    <string name="dummy_location_user">Malang, Jawa Timur</string>
    <string name="dummy_username">Halo, Rudi!</string>
    <string name="dummy_points">1.500</string>
    <string name="points">Points</string>
    <string name="virtual_pet_wellbeings">Virtual Pet Wellbeings</string>
    <string name="virtual_pet">Virtual Pet</string>
    <string name="desc_title_virtual">Tingkatkan kepedulian dengan peliharaanmu</string>
    <string name="dummy_reminder">Pengingat Kepedulian - Vinc</string>
    <string name="dummy_reminder_quest">Memberikan Makan</string>
    <string name="last_text">Terakhir</string>
    <string name="dummy_day">hari ini</string>
    <string name="dummy_time">· 10.15 AM</string>
    <string name="rewards_point">Rewards Point</string>
    <string name="desc_points">Tukar poin dengan reward yang kamu mau!</string>
    <string name="kandang">Kandang</string>
    <string name="makanan">Makanan</string>
    <string name="pasir">Pasir</string>
    <string name="rumah_kucing">Rumah Kucing</string>
    <string name="sekop_pasir">Sekop Pasir</string>
    <string name="adopt_pet">Adopsi Hewan</string>
    <string name="desc_adopt">Pilih hewan yang ingin diadopsi</string>
    <string name="cat">Kucing</string>
    <string name="dummy_count">5+ Jenis ras\ntersedia</string>
    <string name="dummy_name_pet">VINC</string>
    <string name="age">Umur</string>
    <string name="dummy_age">6 Bulan</string>
    <string name="weight">Berat</string>
    <string name="dummy_weight">2,5 Kg</string>
    <string name="gender">Kelamin</string>
    <string name="dummy_gender">Betina</string>
    <string name="ras">Ras</string>
    <string name="dummy_ras">Persia</string>
    <string name="saved">Tersimpan</string>
    <string name="pet_kit">Pet Kit</string>
    <string name="dummy_adopt_name">Anjing Bichon Frise</string>
    <string name="rewards">Rewards</string>
    <string name="primary">Utama</string>
    <string name="tambahan">Tambahan</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="mainan">Mainan</string>
    <string name="minimum_change">Dibutuhkan minimal perubahan</string>
    <string name="dummy_point_reward">15.000 points</string>
    <string name="dog">Anjing</string>
    <string name="profile">Profil</string>
    <string name="dummy_profile_name">Rudi Tabuti</string>
    <string name="general">Umum</string>
    <string name="language">Bahasa</string>
    <string name="dummy_language">IND</string>
    <string name="notification">Notifikasi</string>
    <string name="rating_app">Rating Aplikasi</string>
    <string name="help">Bantuan</string>
    <string name="call_center">Pusat Bantuan</string>
    <string name="report">Laporan</string>
    <string name="about">Tentang</string>
    <string name="about_us">Tentang Kami</string>
    <string name="today">Hari ini</string>
    <string name="top_up_success">Top up berhasil!</string>
    <string name="dummy_notification">Top sebesar Rp. 300.000,00\ndari Gopay Indonesia</string>
    <string name="dummy_time_notification">12.58</string>
    <string name="yesterday">Kemarin</string>
    <string name="history_points"><![CDATA[Riwayat & Points]]></string>
    <string name="total_perolehan">Total perolehan</string>
    <string name="search">Penelusuran</string>
    <string name="vaksinasi">Vaksinasi</string>
    <string name="get_the_point">Mendapatkan point sebesar</string>
    <string name="medical_record">Medical Record</string>
    <string name="dummy_time_activity">Sabtu, 4 Maret 2024 · 12.43 PM</string>
    <string name="dummy_klinik">Klinik Sayang Hewan Indonesia</string>
    <string name="data_user">Data Pemilik</string>
    <string name="fill_auto">Isi otomatis</string>
    <string name="desc_fill_auto">Data akan diisi dari profilmu</string>
    <string name="data_pet">Data Peliharaan</string>
    <string name="kg">Kg</string>
    <string name="data_clinic">Data Klinik</string>
    <string name="date">Tanggal</string>
    <string name="x_ray">X-Ray</string>
    <string name="save">Simpan</string>
    <string name="vaksin">Vaksin</string>
    <string name="dummy_count_pet">3+ Pet lainnya</string>
    <string name="category_pet">Kategori hewan</string>
    <string name="add_pet">Pilih hewan yang ingin ditambahkan</string>
    <string name="virtual_wellbeings">Virtual\nWellbeings</string>
    <string name="ras_atau_jenis">Ras atau jenis</string>
    <string name="your_name_pet">Name Peliharaanmu</string>
    <string name="your_gender_pet">Jenis kelamin peliharaanmu</string>
    <string name="your_age_pet">Umur peliharaanmu</string>
    <string name="your_pet_photo">Foto peliharaanmu</string>
    <string name="add">Tambahkan</string>
    <string name="foster">Foster</string>
    <string name="dummy_name_foster">Welldone Foster</string>
    <string name="owner">Pemilik</string>
    <string name="dummy_name_owner">Joko Susanto</string>
    <string name="dummy_detail_name_pet">Anjing Beagle Australia</string>
    <string name="detail_pet">Detail hewan</string>
    <string name="description">Deskripsi</string>
    <string name="dummy_desc_pet">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="adopt">Adopsi</string>
    <string name="fee">Biaya Administrasi</string>
    <string name="login">Masuk</string>
    <string name="dont_have_acc">Belum memiliki akun?</string>
    <string name="rewards_title">Tukar poinmu dengan rewards menarik</string>
    <string name="most_reward_selected">Rewards paling\nbanyak dipilih nih!</string>
    <string name="minimal_points">Minimal 250 points</string>
    <string name="primary_needs">Kebutuhan Utama</string>
    <string name="title">Title</string>
    <string name="dummy_rewards">Makanan</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="confirmation_desc">Halaman konfirmasi penukaran reward pointmu</string>
    <string name="product">Produk</string>
    <string name="status">Status</string>
    <string name="name_id">Nama/ID</string>
    <string name="address_user">Alamat Penerima</string>
    <string name="expedition">Ekspedisi Pengiriman</string>
    <string name="fill_valid">Semua data yang dimasukkan adalah informasi\nyang benar dan sesuai dengan ketentuan</string>
    <string name="back">Kembali</string>
    <string name="anggora">Anggora</string>
    <string name="domestik">Domestik</string>
    <string name="ragdoll">Ragdoll</string>
    <string name="persia">Persia</string>
    <string name="maine_coon">Maine Coon</string>
    <string name="beagie">Beagie</string>
    <string name="bulldog">Bulldog</string>
    <string name="poodie">Poodie</string>
    <string name="maltese">Maltese</string>
    <string name="bitchon_frise">Bitchon Frise</string>
    <string name="terms__and_condition">Persyaratan\ndan Ketentuan</string>
    <string name="updated_at">Diperbarui 07/05/2024</string>
    <string name="terms_adopter"><![CDATA[SYARAT & KETENTUAN UNTUK PARA ADOPTER]]></string>
    <string name="rules_1">1. PELIHARA HEWAN ADALAH\nKOMITMEN SEUMUR HIDUP</string>
    <string name="desc_rules_1">Peliharan hewan adalah sebuah komitmen seumur hidup yang melibatkan tanggung jawab dan perhatian yang besar terhadap makhluk hidup yang kamu adopsi sebagai hewan peliharaan. Ini adalah kontrak emosional yang kita buat dengan hewan tersebut, di mana kita berjanji untuk memberikan perawatan dan cinta yang tak terbatas selama mereka hidup.</string>
    <string name="desc_rules2_1">Sebelum Kamu benar-benar yakin untuk mengadopsi hewan, Kamu juga harus mempertimbangkan kemungkinan adanya perubahan dalam gaya hidup Kamu yang bisa mempengaruhi bahkan mengancam kesejahteraan hewan yang akan diadopsi seperti:</string>
    <string name="agree_adoptify"><![CDATA[Saya memahami S&K Adoptify]]></string>
    <string name="personal_data">Data Diri</string>
    <string name="data_calon_adapter">Data Calon Adapter</string>
    <string name="card_identity">Kartu Identitas</string>
    <string name="desc_identity_card">Dapat berupa KTP/SIM yang berlaku. Kami akan menjaga\nkerahasiaan data, hak privasi dari calon adopter hewan.</string>
    <string name="submission">Pengajuan</string>
    <string name="dashboard">Dashboard</string>
    <string name="new_text">Baru</string>
    <string name="your_weight_pet">Berat Peliharaanmu</string>
    <string name="jenis_vaksinasi">Jenis Vaksinasi</string>
    <string name="vaksin_anjing">Vaksin Anjing</string>
    <string name="vaksin_kucing">Vaksin Kucing</string>
    <string name="transaction">Transaksi</string>
    <string name="button_back">Button Back</string>
    <string name="page_navigation">Page Navigation</string>
    <string name="username_field">Username Field</string>
    <string name="email_field">Email Field</string>
    <string name="telephone_field">Telephone Field</string>
    <string name="password_field">Password Field</string>
    <string name="confirm_password_field">Confirm Password Field</string>
    <string name="button_add">Button Add</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="data_general">Data Umum</string>
    <string name="data_care">Data Perawatan</string>
</resources>