<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:background="@color/white"
    android:elevation="10dp">

    <ImageView
        android:id="@+id/paw"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/paw_black"
        android:layout_marginTop="75dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAdopt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:textSize="18sp"
        android:textColor="#303030"
        android:text="@string/adopt_pet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paw" />

    <TextView
        android:id="@+id/txtDescAdopt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:textColor="#ABABAB"
        android:text="@string/desc_adopt"
        app:layout_constraintTop_toBottomOf="@id/txtAdopt"
        app:layout_constraintStart_toStartOf="@id/txtAdopt" />

    <ImageView
        android:id="@+id/ic_adopt"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_ajuan_adopt"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="65dp"
        android:padding="10dp"
        android:background="@drawable/background_back_button_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:tabMode="fixed"
        app:tabContentStart="20dp"
        app:tabPaddingStart="50dp"
        app:tabPaddingTop="10dp"
        app:tabPaddingBottom="15dp"
        app:tabPaddingEnd="50dp"
        app:tabGravity="center"
        android:background="@android:color/transparent"
        app:tabRippleColor="@android:color/transparent"
        app:tabUnboundedRipple="false"
        app:tabBackground="@android:color/transparent"
        app:tabTextColor="#80D0D0D0"
        app:tabSelectedTextColor="@color/primaryColor"
        app:tabTextAppearance="@style/TextAppearance.App.LabelLarge"
        app:tabIndicatorColor="@color/primaryColor"
        app:tabIndicatorHeight="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDescAdopt">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/dog" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/cat" />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
